--- a/src/main/content/_assets/css/support.css
+++ b/src/main/content/_assets/css/support.css
@@ -60,7 +60,7 @@
     }
 
     .navbar-dark .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#2C2E50' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(44, 46, 80)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
     }
 }
 
@@ -179,12 +179,10 @@
     top: 62px;
 }
 
-
 #stack_overflow_logo {
     position: relative;
     top: 35px;
 }
-
 
 #groups_io_logo {
     position: relative;
